--- a/site/assets/4.0/scss/_topnav.scss
+++ b/site/assets/4.0/scss/_topnav.scss
@@ -9,7 +9,8 @@
         .cf-header {
             position: sticky;
             top: 0;
-            z-index: $zindex-sticky;
+            //z-index: $zindex-sticky;
+            z-index: 1045;
         }
 
         .cf-content {
