update linting, fix a few issues

--- a/site/_includes/4.0/layouts/home.html
+++ b/site/_includes/4.0/layouts/home.html
@@ -16,7 +16,7 @@
 {% include notification %}
 {% include topnav %}
 
-<main id="content" role="main">
+<main id="content">
 {{ content }}
 </main>
 
