--- a/site/_includes/4.0/partials/footer.html
+++ b/site/_includes/4.0/partials/footer.html
@@ -28,6 +28,7 @@
             <span class="font-weight-bold"><a href="http://aem.cast.org/">National Center on Accessible Educational Materials at CAST, Inc.</a></span><br />
             <small>Disclaimer: This does not necessarily represent endorsement by or the policies of the National Center on Accessible Educational Materials, the US Department of Education, and the US Federal Government.</small>
           </div>
+        </div>
       </div>
       <div class="col-md-auto">
         {% include "./icons/cast-logo.svg", width: "9.645rem", height: "3rem" %}
