--- a/site/_includes/4.0/partials/topnav.html
+++ b/site/_includes/4.0/partials/topnav.html
@@ -29,10 +29,12 @@
     </ul>
   </nav>
 
-  <ul class="navbar-nav ms-auto cf-header-social flex-row">
-    <li class="nav-item me-1">
+  <ul class="navbar-nav ms-auto cf-header-social flex-row me-1">
+    {%- if site.environment == "production" %}
+    <li class="nav-item">
       {%- include "./partials/version_menu.html" %}
     </li>
+    {%- endif -%}
     <li class="nav-item">
       <a href="{{ site.twitter.home }}" class="nav-link px-0_5" aria-label="Twitter">
         {% include "./icons/twitter.svg", width: "1rem", height: "1rem" %}
@@ -43,6 +45,7 @@
         {% include "./icons/github.svg", width: "1rem", height: "1rem" %}
       </a>
     </li>
+    <li class="navbar-divider" role="presentation"></li>
     <li class="nav-item">
       {%- assign settings_menu = pathPartials | append: "/settings_menu.html" -%}
       {%- include settings_menu %}
