--- a/site/assets/4.0/scss/_content.scss
+++ b/site/assets/4.0/scss/_content.scss
@@ -10,7 +10,6 @@
     padding-bottom: 2rem;
 
     @include media-breakpoint-up(md) {
-        padding-top: 1.5rem;
         padding-right: 2.5rem;
         padding-left: 2.5rem;
     }
@@ -39,6 +38,10 @@ h4 {
     > code {
         font-weight: 500;
     }
+}
+
+.cf-title {
+    @include font-size(3rem);
 }
 
 // markdown-it-anchor icon
@@ -107,4 +110,35 @@ h4 {
     margin-left: 5rem;
 
     @include clearfix();
+}
+
+// Tables - merged .table and .table-bordered styles
+.cf-content > table:not(.table) {
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 1rem;
+    border: $table-border-width solid $table-border-color;
+
+    th,
+    td {
+        padding: $table-cell-padding;
+        vertical-align: top;
+        border: $table-border-width solid $table-border-color;
+    }
+
+    thead {
+        th,
+        td {
+            vertical-align: bottom;
+            border-bottom-width: (2 * $table-border-width);
+        }
+    }
+
+    tbody + tbody {
+        border-top: (2 * $table-border-width) solid $table-border-color;
+    }
+
+    .table {
+        background-color: $body-bg;
+    }
 }
