--- a/site/assets/4.0/scss/_toc.scss
+++ b/site/assets/4.0/scss/_toc.scss
@@ -8,6 +8,7 @@
     min-width: 0;
     margin-bottom: $list-margin-bottom;
     margin-left: $list-margin-left;
+    @include font-size(.9735rem);
     @include list-unstyled();
 
     .cf-toc-list {
