--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -262,6 +262,7 @@ $enable-utility-position:                   true !default;
 $enable-utility-position-fixed-top:         true !default;
 $enable-utility-position-fixed-bottom:      true !default;
 $enable-utility-position-sticky-top:        true !default;
+$enable-utility-position-sticky-top-responsive: true !default;
 
 $enable-utility-sronly:                     true !default;
 $enable-utility-sronly-common:              true !default;
