--- a/scss/utilities/_position.scss
+++ b/scss/utilities/_position.scss
@@ -39,6 +39,23 @@
                 top: 0;
                 z-index: $zindex-sticky;
             }
+
+            @if $enable-utility-position-sticky-top-responsive {
+                @each $bp in $utility-sticky-top-breakpoints {
+                    // Skip smallest breakpoint for up (equivalent to `.sticky-top`)
+                    @if breakpoint-min($bp, $grid-breakpoints) != null {
+                        $bprule: breakpoint-designator($bp);
+
+                        @include media-breakpoint-up($bp) {
+                            .sticky#{$bprule}-top {
+                                position: sticky;
+                                top: 0;
+                                z-index: $zindex-sticky;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
