--- a/scss/utilities/_border.scss
+++ b/scss/utilities/_border.scss
@@ -35,7 +35,7 @@
     }
 
 
-    // Repsonsive border addition and removal
+    // Responsive border addition and removal
     @each $breakpoint in $utility-border-breakpoints {
         $bprule: breakpoint-designator($breakpoint);
 
