--- a/site/assets/4.0/scss/_toc.scss
+++ b/site/assets/4.0/scss/_toc.scss
@@ -1,31 +1,16 @@
-.cf-toc {
-    padding-left: 1rem;
-}
-
 .cf-toc-list {
     display: flex;
     flex-direction: column;
     min-width: 0;
     margin-bottom: $list-margin-bottom;
-    margin-left: $list-margin-left;
-    @include font-size(.9735rem);
-    @include list-unstyled();
+    margin-left: 0;
+    @include font-size(.9375rem);
 
     .cf-toc-list {
         padding: 0;
         margin-bottom: 0;
         margin-left: $list-margin-left;
         border-left: 0;
-    }
-
-    > .cf-toc-item {
-        list-style: none;
-
-        &::before {
-            position: absolute;
-            margin-left: -$list-margin-left;
-            content: $list-bulleted-content;
-        }
     }
 }
 
@@ -40,7 +25,6 @@
     order: 1;
     padding-top: 1rem;
     padding-bottom: 1rem;
-    @include font-size(.9375rem);
 
     .cf-toc {
         @supports (position: sticky) {
@@ -51,10 +35,15 @@
             overflow-y: auto;
         }
 
-        padding: .25rem 0;
+        padding: .25rem 0 .25rem 1rem;
         margin: 0;
         list-style: none;
         border-left: 1px solid $border-color;
+    }
+
+    .cf-toc-list {
+        @include font-size(.875rem);
+        @include list-unstyled();
     }
 
     .cf-toc-list .cf-toc-list {
