--- a/site/assets/4.0/css/docs-rtl.css
+++ b/site/assets/4.0/css/docs-rtl.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .skiplink {
   position: absolute !important;
   top: .25rem;
@@ -459,19 +458,13 @@
   margin-right: 1rem;
 }
 
-.cf-toc {
-  padding-right: 1rem;
-}
-
 .cf-toc-list {
   display: flex;
   flex-direction: column;
   min-width: 0;
   margin-bottom: 1rem;
-  margin-right: 1.25rem;
-  font-size: 0.9735rem;
-  padding-right: 0;
-  list-style: none;
+  margin-right: 0;
+  font-size: 0.9375rem;
 }
 
 .cf-toc-list .cf-toc-list {
@@ -479,16 +472,6 @@
   margin-bottom: 0;
   margin-right: 1.25rem;
   border-right: 0;
-}
-
-.cf-toc-list > .cf-toc-item {
-  list-style: none;
-}
-
-.cf-toc-list > .cf-toc-item::before {
-  position: absolute;
-  margin-right: -1.25rem;
-  content: "● ";
 }
 
 @media (min-width: 75em) {
@@ -502,11 +485,10 @@
   order: 1;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  font-size: 0.9375rem;
 }
 
 .cf-toc-side .cf-toc {
-  padding: .25rem 0;
+  padding: .25rem 1rem .25rem 0;
   margin: 0;
   list-style: none;
   border-right: 1px solid #bfc6cd;
@@ -521,6 +503,12 @@
     overflow-x: visible;
     overflow-y: auto;
   }
+}
+
+.cf-toc-side .cf-toc-list {
+  font-size: 0.875rem;
+  padding-right: 0;
+  list-style: none;
 }
 
 .cf-toc-side .cf-toc-list .cf-toc-list {
@@ -707,10 +695,7 @@ pre[class*="language-"] {
   direction: rtl;
 }
 
-pre[class*="language-"]::-moz-selection,
-pre[class*="language-"] ::-moz-selection,
-code[class*="language-"]::-moz-selection,
-code[class*="language-"] ::-moz-selection {
+pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection, code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
   background: #b3d4fc;
 }
 
