--- a/scss/forms/_form-control.scss
+++ b/scss/forms/_form-control.scss
@@ -87,6 +87,12 @@
             &::-ms-expand {
                 display: none;
             }
+
+            // Remove outline from select box in FF
+            &:-moz-focusring {
+                color: transparent;
+                text-shadow: 0 0 0 $input-color;
+            }
         }
 
         textarea.form-control {
