--- a/scss/component/_list.scss
+++ b/scss/component/_list.scss
@@ -363,6 +363,7 @@
     // Use on `<li>`s or `<div>`s within the `.list` parent.
     .list-item {
         position: relative;
+        margin-bottom: 0; // for <label> variations
         color: $list-item-color;
         // Override `<button>` background and border.
         background-color: $list-item-bg;
