Components-Cards: Add card height variable

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1156,6 +1156,7 @@ $media-margin-y:                1rem !default;
 $card-padding-y:            .75rem !default;
 $card-padding-x:            1rem !default;
 $card-margin-bottom:        1rem !default;
+$card-height:               null !default;
 $card-bg:                   $component-bg !default;
 $card-color:                null !default;
 $card-border-color:         $component-overlay-border-color !default;
