Component-Breadcumb: Add font size variable

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -955,6 +955,7 @@ $progress-bar-box-shadow:       inset 0 .125rem .25rem rgba($white, .25) !defaul
 // Breadcrumbs
 // =====
 $breadcrumb-margin-bottom:      1rem !default;
+$breadcrumb-font-size:          null !default;
 
 $breadcrumb-active-color:       $uibase-700 !default;
 
