--- a/scss/component/_breadcrumb.scss
+++ b/scss/component/_breadcrumb.scss
@@ -3,6 +3,7 @@
         display: flex;
         flex-wrap: wrap;
         margin-bottom: $breadcrumb-margin-bottom;
+        @include font-size($breadcrumb-font-size);
         @include list-unstyled();
     }
 
