--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -28,14 +28,16 @@
 
 // Form validation states
 // Generate the form validation CSS for valid and invalid states.
+// This mixin uses an `if()` technique to be compatible with Dart Sass
+// See https://github.com/sass/sass/issues/1873#issuecomment-152293725 for more details
 @mixin form-validation-state-selector($state) {
     @if ($state == "valid" or $state == "invalid") {
-        .was-validated &:#{$state},
-        &.is-#{$state} {
+        .was-validated #{if(&, "&", "")}:#{$state},
+        #{if(&, "&", "")}.is-#{$state} {
             @content;
         }
     } @else {
-        &.is-#{$state} {
+        #{if(&, "&", "")}.is-#{$state} {
             @content;
         }
     }
