Content-Button: Add white space variable

--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -6,6 +6,7 @@
         font-weight: $btn-font-weight;
         text-align: center;
         text-decoration: none;
+        white-space: $btn-white-space;
         vertical-align: middle;
         cursor: pointer;
         user-select: none;
