--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -717,6 +717,7 @@ $btn-font-family:           null !default;
 $btn-font-size:             $font-size-base !default;
 $btn-font-weight:           $font-weight-normal !default;
 $btn-line-height:           1.5 !default;
+$btn-white-space:           null !default;
 $btn-border-width:          $border-width !default;
 $btn-border-radius:         $border-radius !default;
 $btn-box-shadow:            inset 0 .125em .25em rgba($white, .25), 0 .125em .125em rgba($black, .075) !default;
