--- a/scss/component/_modal.scss
+++ b/scss/component/_modal.scss
@@ -138,6 +138,11 @@
         transform: $modal-transform-in;
     }
 
+    // Close is blocked animation
+    .modal.modal-blocked .modal-dialog {
+        transform: $modal-transform-blocked;
+    }
+
     // Actual modal
     .modal-content {
         position: relative;
