--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -6,6 +6,7 @@ $enable-root-fonts:                         true !default;
 
 // Grid layout
 $enable-grid-row-cols:                      true !default;
+$enable-grid-responsive-containers:         true !default;
 
 // Base Typography
 $enable-typography:                         true !default;
