--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -268,6 +268,7 @@ $grid-breakpoints: map-sort-by-values($grid-breakpoints);
 // of breakpoint keys based upon the master `$grid-breakpoints` map.
 // This way each the CSS for each of the items can be controlled and reduced as needed.
 // The items in the following lists *must* be in the keys for the `$grid-breakpoints` map.
+$responsive-container-breakpoints:  map-keys($grid-breakpoints) !default;
 $row-columns-breakpoints:           map-keys($grid-breakpoints) !default;
 $card-horizontal-breakpoints:       map-keys($grid-breakpoints) !default;
 $card-deck-breakpoints:             map-keys($grid-breakpoints) !default;
