Docs: Add redirects (aliases) from v3 to v4 - pointing to new functionality where needed

--- a/site/4.0/layout/index.html
+++ b/site/4.0/layout/index.html
@@ -1,5 +1,6 @@
 ---
 layout: alias
-destination: "4.0/layout/overview/"
+usePathVersion: true
+destination: "layout/overview/"
 sitemapIgnore: true
 ---
