--- a/site/4.0/components/index.html
+++ b/site/4.0/components/index.html
@@ -1,5 +1,6 @@
 ---
 layout: alias
-destination: "4.0/components/alerts/"
+usePathVersion: true
+destination: "components/alerts/"
 sitemapIgnore: true
 ---
