Fix some production doc generate issues

--- a/site/_includes/4.0/layouts/doc.html
+++ b/site/_includes/4.0/layouts/doc.html
@@ -21,7 +21,7 @@
 {% include footer -%}
 
 {% if site.environment == "production" -%}
-{% include algolia.html %}
+{% include algolia %}
 {% endif -%}
 </body>
 </html>
