--- a/site/_includes/4.0/partials/head.html
+++ b/site/_includes/4.0/partials/head.html
@@ -11,11 +11,10 @@
 <meta name="description" content="{{ description | default: site.description | smartify }}">
 <meta name="author" content="{{ site.author }}">
 
-{%- comment -%}
-<!-- Use faceted search ? -->
+{% if site.environment == "production" -%}
 <meta name="docsearch:language" content="{{ site.language }}">
 <meta name="docsearch:version" content="{{ version.docs | valueIfEmpty: site.version.docs }}">
-{%- endcomment -%}
+{%- endif %}
 
 <title>
   {%- if layout == "home" -%}
