--- a/site/_includes/4.0/partials/head_styles.html
+++ b/site/_includes/4.0/partials/head_styles.html
@@ -1,12 +1,12 @@
 <!-- Font CSS -->
 {% if site.environment == "production" -%}
-<link href="{{ site.cdn.fontawe }}" integrity="{{ site.cdn.fontawe_hash }}" crossorigin="anonymous" rel="stylesheet" property="stylesheet">
+<link href="{{ site.cdn.fontawe }}" integrity="{{ site.cdn.fontawe_hash }}" crossorigin="anonymous" rel="stylesheet">
 {% else -%}
-<link href="{{ site.path }}/assets{{ pathVersion }}/fonts/fontawesome/css/all.min.css" rel="stylesheet" property="stylesheet">
+<link href="{{ site.path }}/assets{{ pathVersion }}/fonts/fontawesome/css/all.min.css" rel="stylesheet">
 {% endif %}
 
-<!-- Algolia DocSearch CSS -->
 {% if site.environment == "production" -%}
+<!-- Algolia DocSearch CSS -->
 <link href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" rel="stylesheet">
 {% endif -%}
 
