--- a/scss/forms/_form-check.scss
+++ b/scss/forms/_form-check.scss
@@ -21,8 +21,8 @@
                     }
                     // Get custom input to roughly match the parent label's opacity
                     // Fixes issue with not going semi-transparent in disabled fieldsets
-                    ~ .form-check-label:before,
-                    ~ .form-check-label:after {
+                    ~ .form-check-label::before,
+                    ~ .form-check-label::after {
                         opacity: .999;
                     }
                 }
