Utilities-Typography: Add normal font style

--- a/scss/utilities/_typography.scss
+++ b/scss/utilities/_typography.scss
@@ -39,6 +39,7 @@
     }
     @if $enable-utility-text-style {
         .font-italic         { font-style: italic !important; }
+        .font-normal         { font-style: normal !important; }
     }
 
     // Font families
