Update print layout

--- a/site/_includes/4.0/partials/body.html
+++ b/site/_includes/4.0/partials/body.html
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-3 col-xl-2 cf-sidebar">
+    <div class="col-md-3 col-xl-2 cf-sidebar print-none">
       {% include sidebar %}
     </div>
     <nav class="d-none d-xl-block col-xl-2 cf-toc-side" aria-label="Page"></nav>
