--- a/site/_includes/4.0/partials/topnav.html
+++ b/site/_includes/4.0/partials/topnav.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-expand-lg navbar-dark print-hide cf-header">
+<header class="navbar navbar-expand-lg navbar-dark print-none cf-header">
   <a href="{{ site.path }}/" class="navbar-brand me-0_5" aria-label="{{ site.title }}">
     {% include "./icons/figuration-outline.svg", class: "cf-header-logo" %}
     <span class="sr-only-xs-down">CAST Figuration</span>
