--- a/site/assets/4.0/css/docs.css
+++ b/site/assets/4.0/css/docs.css
@@ -695,6 +695,13 @@ pre[class*="language-"] {
   direction: ltr;
 }
 
+@media print {
+  code[class*="language-"],
+  pre[class*="language-"] {
+    white-space: pre-wrap !important;
+  }
+}
+
 pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection, code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
   background: #b3d4fc;
 }
