--- a/site/_includes/4.0/partials/footer.html
+++ b/site/_includes/4.0/partials/footer.html
@@ -10,7 +10,7 @@
       <br>
       &copy; 2013-{{ 'now' | date: "%Y" }} <a href="http://www.cast.org/">CAST, Inc.</a>
       <br>
-      Portions: &copy; 2011-2019 the Bootstrap Authors and Twitter, Inc. Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">the MIT license</a> or <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.
+      Portions: &copy; 2011-{{ 'now' | date: "%Y" }} the Bootstrap Authors and Twitter, Inc. Licensed under <a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">the MIT license</a> or <a href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.
     </p>
     <p>
       Code licensed <a rel="license" href="{{ site.repo }}/blob/master/LICENSE">MIT</a>,
