--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -23,7 +23,9 @@ $enable-color-warnings:         false !default;     // false
 $encode-svg-chars: (
     ("<", "%3c"),
     (">", "%3e"),
-    ("#", "%23")
+    ("#", "%23"),
+    ("(", "%28"),
+    (")", "%29")
 ) !default;
 
 
