--- a/scss/functions/_str-util.scss
+++ b/scss/functions/_str-util.scss
@@ -21,7 +21,12 @@
 @function encode-svg($string) {
     @if str-index($string, "data:image/svg+xml") {
         @each $char, $encoded in $encode-svg-chars{
-            $string: str-replace($string, $char, $encoded);
+            // Do not escape the url brackets
+            @if str-index($string, "url(") == 1 {
+                $string: url("#{str-replace(str-slice($string, 6, -3), $char, $encoded)}");
+            } @else {
+                $string: str-replace($string, $char, $encoded);
+            }
         }
     }
 
