Content-Forms: Add cursor setting for `.form-check-label`

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -831,6 +831,7 @@ $form-inline-check-margin-x:    .25em !default;
 $form-check-gutter:                 1.25em !default;
 $form-check-margin-bottom:          .25rem !default;
 $form-check-label-font-weight:      null !default;
+$form-check-label-cursor:           null !default;
 $form-check-label-disabled-opacity: .6 !default;
 
 // Form checkradio
