--- a/scss/forms/_form-check.scss
+++ b/scss/forms/_form-check.scss
@@ -34,6 +34,7 @@
             display: inline;
             margin-bottom: 0; // Override default `<label>` bottom margin
             font-weight: $form-check-label-font-weight;
+            cursor: $form-check-label-cursor;
         }
     }
 
