Docs: Fix canonical url

--- a/site/_includes/4.0/partials/head.html
+++ b/site/_includes/4.0/partials/head.html
@@ -24,7 +24,7 @@
   {%- endif -%}
 </title>
 
-<link rel="canonical" href="{{site.url }}{{ url }}">
+<link rel="canonical" href="{{site.url }}{{ page.url }}">
 
 {% include head_favicon %}
 {%- include head_social %}
